# WebGym

./: .gitignore  CLAUDE.md  任务书.doc  任务书.md
backend/: README.md  pyproject.toml  wsgi.py
backend/app/: __init__.py  cli.py  config.py  extensions.py
backend/app/api/: attendance.py  auth.py  bookings.py  card_types.py  cards.py  classes.py  coaches.py  members.py  ping.py  sessions.py
backend/app/models/: __init__.py  attendance.py  booking.py  card.py  class_.py  coach.py  member.py  user.py
backend/app/schemas/: __init__.py  booking.py  card.py  card_type.py  class_.py  coach.py  member.py
backend/app/services/: __init__.py  booking_service.py  card_service.py
backend/app/utils/: auth.py  crypto.py  pagination.py
backend/instance/: .gitkeep
backend/migrations/versions/: 7767fac4ee01_initial_schema_users_members_coaches_.py
backend/tests/: conftest.py  test_attendance.py  test_auth.py  test_booking_service.py  test_bookings.py  test_card_service.py  test_card_types.py  test_cards.py  test_classes.py  test_coaches.py  test_members.py  test_models.py  test_ping.py  test_sessions.py
docs/: API设计.md  技术选型对比.md  数据库设计.md  测试报告.md  设计方案.md  需求分析.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: attendance.ts  auth.ts  bookings.ts  cardTypes.ts  cards.ts  classes.ts  coaches.ts  http.ts  members.ts  sessions.ts  types.ts
frontend/src/layouts/: AdminLayout.vue  MemberLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
(+14 files in other folders)
