[project]
name = "webgym-backend"
version = "0.1.0"
description = "基于 Web 的健身房会员信息管理系统 — 后端"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "Flask-Cors>=4.0",
    "marshmallow>=3.20",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["instance*", "tests*", "migrations*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
